<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2022 Google LLC

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         https://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

  <!-- Label shown on launcher icon. [CHAR_LIMIT=NONE] -->
  <string name="app_label">Consumer App</string>

  <!--
    Dialog message saying that the app will not function unless location permissions are granted.
    [CHAR_LIMIT=NONE]
    -->
  <string name="msg_require_permissions" translatable="false">App will not function unless location permissions are granted</string>

  <!-- Snackbar message saying that the app cannot connect to the provider backend -->
  <string name="msg_provider_connection_error" translatable="false">Can\'t connect to Provider backend</string>

  <!-- Begin state titles. -->
  <string name="state_initial" translatable="false">Waiting for trip</string>
  <!-- Waiting to find a driver. -->
  <string name="state_new" translatable="false">Waiting to find a driver</string>
  <!-- Selecting pickup point. -->
  <string name="state_select_pickup" translatable="false">Choose a pickup location</string>
  <!-- Selecting dropoff point. -->
  <string name="state_select_dropoff" translatable="false">Choose a drop-off location</string>
  <!-- Enroute to pickup state [CHAR_LIMIT=50] -->
  <string name="state_enroute_to_pickup" translatable="false">Driver is arriving at pickup</string>
  <!-- Driver arrived at pickup state [CHAR_LIMIT=50] -->
  <string name="state_arrived_at_pickup" translatable="false">Driver arrived at pickup</string>
   <!-- Driver is picking up other rider [CHAR_LIMIT=50] -->
  <string name="state_picking_up_other_rider" translatable="false">Driver is picking another rider up</string>
  <!-- Driver is dropping off other rider [CHAR_LIMIT=50] -->
  <string name="state_dropping_off_other_rider" translatable="false">Driver is dropping another rider off</string>
  <!-- Driver is stopping for other rider [CHAR_LIMIT=50] -->
  <string name="state_stopping_for_other_rider" translatable="false">Driver is stopping for another rider</string>

  <!-- Enroute to dropoff state [CHAR_LIMIT=50] -->
  <string name="state_enroute_to_dropoff" translatable="false">Driving to drop-off</string>
  <!-- Enroute to intermediate destination state [CHAR_LIMIT=50] -->
  <string name="state_enroute_to_intermediate_destination" translatable="false">Driving to stop</string>
  <!-- Drived arrived to intermediate destination [CHAR_LIMIT=50] -->
  <string name="state_arrived_at_intermediate_destination" translatable="false">Driver arrived at stop</string>
  <!-- Trip completed state [CHAR_LIMIT=50] -->
  <string name="state_end_of_trip" translatable="false">End of trip</string>
  <!-- End state titles. -->

  <!--Label for the Share trip switch [CHAR_LIMIT=50] -->
  <string name="shared_trip" translatable="false">Shared Trip</string>

  <!--Label for Trip Match [CHAR_LIMIT=50] -->
  <string name="trip_id_label" translatable="false">Trip Id: %1$s</string>

  <!--Label for Vehicle [CHAR_LIMIT=50] -->
  <string name="vehicle_id_label" translatable="false">Vehicle Id: %1$s</string>

  <!--Initial Button Label -->
  <string name="request_button_label" translatable="false">Request Trip</string>
  <string name="dropoff_label" translatable="false">Confirm Drop-off</string>
  <string name="pickup_label" translatable="false">Confirm Pickup</string>
   <string name="confirm_trip_label" translatable="false">Confirm Trip</string>
  <string name="add_stop_label" translatable="false">Add Stop</string>
  <!-- String for formatting eta [CHAR_LIMIT=40] -->
  <plurals name="eta_format_string" translatable="false">
    <item quantity="one">%d min</item>
    <item quantity="other">%d mins</item>
  </plurals>

  <!-- Indicates the eta is less than 1 minute. [CHAR_LIMIT=50] -->
  <string name="eta_within_one_minute" translatable="false">Within 1 minute</string>

  <!-- String for formatting eta in meters [CHAR_LIMIT=40] -->
  <string name="distance_format_string_meters" translatable="false">&#8226; %dm</string>

  <!-- String for formatting eta in kilometers [CHAR_LIMIT=40] -->
  <string name="distance_format_string_km" translatable="false">&#8226; %.2fkm</string>
</resources>
